# batmania

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUTHORS.md  CONTRIBUTION.md  DFN_Plett.ipynb  FHM.ipynb  LICENSE  README.md  SPM_Zhang.ipynb  SPMe.ipynb  helpers.py  pyproject.toml  uocps.py
books/: README.md
books/bms1/: README.md
books/bms1/micro/: data.py  fem.py  sol_fem_scipy.py
papers/: README.md
papers/spm/: README.md  data.py  fem.py  sol_stiff.py  y_start.py
papers/spm/plots/: plot_u_app.py  pt_Uocp_y.py  pt_j(Uapp)_t.py  pt_j(eta)_y.py  pt_j_Uapp.py
