[tool.pdm]

[project]
name = "research"
version = "0.1.1"
description = ""
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "diffeqpy>=1.2.0",
    "matplotlib>=3.7.0",
    "scikit-fem>=8.0.0",
    "plotly>=5.13.0",
    "kaleido==0.2.1",
    "polars>=0.16.7",
    "dash>=2.8.1",
    "setuptools>=67.4.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
